# json-test

./: .gitignore  README.md  default.nix  example.json  json-test.cabal  json-test.nix
exe/: Main.hs
src/JSON/: Benchmark.hs  Gen.hs  Lexer.x  Parser.y
test/: Main.hs
