name:                json-test
version:             0.1.0.0
synopsis:            Testing a faster json parser with happy
description:         JSON parsing with alex and happy
homepage:            https://github.com/urbint/json-test
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          david@urbint.com
copyright:           Urbint (c) 2018-2019
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  build-depends:
    aeson,
    array,
    bytestring,
    base,
    criterion,
    hw-json,
    QuickCheck,
    quickcheck-instances,
    scientific,
    text,
    unordered-containers,
    vector
  hs-source-dirs:
    src
  build-tools:
    alex,
    happy
  exposed-modules:
    JSON.Parser
    JSON.Lexer
    JSON.Gen
    JSON.Benchmark
  default-language:
    Haskell2010

executable example
  main-is:
    Main.hs
  build-depends:
    base < 5,
    json-test
  hs-source-dirs:
    exe
  default-language:
    Haskell2010

test-suite tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    test
  build-depends:
    base < 5,
    json-test
  ghc-options:
    -Wall -threaded -rtsopts
  default-language:
    Haskell2010

source-repository head
  type: git
  location: https://github.com/urbint/json-test.git